# db-agent

./: .env.example  .gitignore  README.md  agent.py  main.py  pyproject.toml  streaming_agent.py
db/: agent_state.db-shm  agent_state.db-wal  seed.py  user_memory.sql
docs/: curriculum-mapping.md  troubleshooting.md
mcp_server/: db_server.py
mcp_servers/: db_server.py
memory/: hybrid_window_manager.py  long_term_memory.py  short_term_memory.py  token_budget.py  vector_store.py
multi_agent/: agents.py  base.py  cache.py  entitlement.py  graph.py  guardrails.py  nodes.py  orchestrator.py  state.py
multi_agent/subagents/: sql_agent.py
prompts/: system_prompt.md  system_prompt.py
rag/: __init__.py  rag_pipeline.py  self_query.py
tests/: eval_cases.py  eval_runner.py  test_agent.py  test_memory.py  test_self_query.py
tools/: __init__.py  analysis.py  chart.py  knowledge.py  query.py  schema.py
utils/: cost.py  llm.py  tracer.py
