[project]
name = "db-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "aiosqlite>=0.20.0",
    "chromadb>=1.5.9",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "matplotlib>=3.11.1",
    "mcp>=1.28.1",
    "numpy>=2.5.1",
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
